fixed navigation on small screens

--- a/style/deviceCompat.css
+++ b/style/deviceCompat.css
@@ -56,6 +56,15 @@
         display: flex;
         top: 15px;
         margin-left: 0;
+        column-gap: 1rem;
+    }
+    hr {
+        opacity: 0;
+    }
+    .verticalLine {
+        border-left: solid var(--color-white);
+        margin-right: 20px;
+        height: 20px;
     }
     .social-list {
         opacity: 0;
